--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.3",
+    "@next/mdx": "^12.2.5",
     "@supabase/supabase-js": "^1.35.6",
     "bootstrap": "^4.6.2",
+    "fs": "^0.0.1-security",
+    "marked": "^4.1.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "render-markdown-js": "^1.3.0",
+    "zero-md": "^2.3.6"
   },
   "devDependencies": {
     "eslint": "8.23.0",
